feat: show tile AI status

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -249,6 +249,10 @@
         <canvas id="map" width="640" height="480" aria-label="Map preview"></canvas>
         <div class="btn-group" id="paletteGroup">
           <div id="paletteWrap">
+            <div id="nanoStatus">
+              <div id="nanoProgress" class="nano-progress"></div>
+              <div id="nanoBadge" class="nano-badge off">✗</div>
+            </div>
             <div id="worldPalette">
               <button type="button" data-tile="0" style="background:#1e271d"></button>
               <button type="button" data-tile="1" style="background:#2c342c"></button>
