fix: handle text response from prompt

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -105,6 +105,13 @@
       border: 1px solid #2b3b2b;
     }
 
+    #stampWindow #nanoStampBtn {
+      font-size: 12px;
+      margin: 4px auto 0;
+      display: block;
+      padding: 2px 4px;
+    }
+
     legend {
       font-size: 16px;
       font-weight: 600;
