feat: add cancelable map placement

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -353,6 +353,7 @@
           <textarea id="npcTree" style="display:none"></textarea>
           <div id="dialogPreview" style="margin-top:6px"></div>
           <button class="btn" id="addNPC">Add NPC</button>
+          <button class="btn" type="button" id="cancelNPC" style="display:none">Cancel</button>
           <button class="btn" id="delNPC" style="display:none">Delete NPC</button>
           <button class="btn" type="button" id="closeNPC">Done</button>
         </div>
@@ -387,6 +388,7 @@
           <label id="itemUseAmtWrap" style="display:none">Heal Amount<input id="itemUseAmount" type="number" min="1" /></label>
           <label id="itemUseWrap">Use<textarea id="itemUse" rows="2"></textarea></label>
           <button class="btn" id="addItem">Add Item</button>
+          <button class="btn" type="button" id="cancelItem" style="display:none">Cancel</button>
           <button class="btn" id="delItem" style="display:none">Delete Item</button>
         </div>
       </fieldset>
@@ -407,6 +409,7 @@
           <canvas id="bldgCanvas" width="192" height="160" style="margin-top:4px"></canvas>
           <label>Interior<select id="bldgInterior"></select></label>
           <button class="btn" id="addBldg">Add Building</button>
+          <button class="btn" type="button" id="cancelBldg" style="display:none">Cancel</button>
           <button class="btn" id="delBldg" style="display:none">Remove Building</button>
         </div>
       </fieldset>
