feat: queue a* pathfinding

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -313,6 +313,7 @@
           <label>Map<input id="npcMap" value="world" /></label>
           <label>X<input id="npcX" type="number" min="0" /></label>
           <label>Y<input id="npcY" type="number" min="0" /></label>
+          <label>Loop<input id="npcLoop" placeholder="x1,y1;x2,y2" /></label>
           <div class="portrait" id="npcPort"></div>
           <div class="row" style="margin:8px 0">
             <span class="pill" id="npcPrevP">&lt;</span>
@@ -535,11 +536,12 @@
   <script defer src="./core/combat.js"></script>
   <script defer src="./core/party.js"></script>
   <script defer src="./core/quests.js"></script>
-  <script defer src="./core/npc.js"></script>
-  <script defer src="./dustland-core.js"></script>
-  <script defer src="./dustland-nano.js"></script>
-  <script defer src="./dustland-engine.js"></script>
-  <script defer src="./adventure-kit.js"></script>
-</body>
+    <script defer src="./core/npc.js"></script>
+    <script defer src="./dustland-core.js"></script>
+    <script defer src="./dustland-path.js"></script>
+    <script defer src="./dustland-nano.js"></script>
+    <script defer src="./dustland-engine.js"></script>
+    <script defer src="./adventure-kit.js"></script>
+  </body>
 
 </html>
