feat: add NPC path editor

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -313,7 +313,9 @@
           <label>Map<input id="npcMap" value="world" /></label>
           <label>X<input id="npcX" type="number" min="0" /></label>
           <label>Y<input id="npcY" type="number" min="0" /></label>
-          <label>Loop<input id="npcLoop" placeholder="x1,y1;x2,y2" /></label>
+          <label>Patrol Waypoints</label>
+          <div id="npcLoopPts"></div>
+          <button class="btn" type="button" id="addLoopPt">+ Waypoint</button>
           <div class="portrait" id="npcPort"></div>
           <div class="row" style="margin:8px 0">
             <span class="pill" id="npcPrevP">&lt;</span>
