feat: extend dialog goto options

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -172,6 +172,16 @@
       padding: 0 4px;
     }
 
+    #treeEditor .choiceAdv fieldset {
+      border: 1px solid #2b3b2b;
+      padding: 4px;
+      margin-top: 4px;
+    }
+
+    #treeEditor .choiceAdv fieldset legend {
+      padding: 0 4px;
+    }
+
     #treeEditor .choices details {
       flex-basis: 100%;
     }
