--- a/dustland.html
+++ b/dustland.html
@@ -27,7 +27,7 @@
           <div class="badge">Scrap: <span id="scrap">0</span></div>
           <div class="badge">Map: <span id="mapname">—</span></div>
         </div>
-        <p class="muted" style="margin-top:10px">Controls: <b>WASD/Arrows</b> move • <b>E/Space</b> interact/door & take nearby item • <b>T</b> take item • <b>I</b> Inventory • <b>P</b> Party • <b>Q</b> Quests • <b>G/L</b> save/load • <b>M</b> minimap • <b>Esc</b> close</p>
+        <p class="muted" style="margin-top:10px">Controls: <b>WASD/Arrows</b> move • <b>E/Space</b> interact/door & take nearby item • <b>T/G</b> take item • <b>I</b> Inventory • <b>P</b> Party • <b>Q</b> Quests • <b>O</b> audio • <b>C</b> mobile controls • <b>M</b> minimap • <b>Esc</b> close</p>
         <div class="tabs">
           <div class="tab active" id="tabInv">Inventory</div>
           <div class="tab" id="tabParty">Party</div>
