--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -548,6 +548,7 @@
   <script defer src="./core/quests.js"></script>
     <script defer src="./core/npc.js"></script>
     <script defer src="./dustland-core.js"></script>
+    <script defer src="./core/loop.js"></script>
     <script defer src="./dustland-path.js"></script>
     <script defer src="./dustland-nano.js"></script>
     <script defer src="./dustland-engine.js"></script>
