fix: remove default modules before module selection

--- a/dustland.html
+++ b/dustland.html
@@ -165,6 +165,9 @@
   <script>
     const params = new URLSearchParams(location.search);
     const isAck = params.get('ack-player') === '1';
+    if (!isAck) {
+      document.querySelectorAll('script[src^="./modules/"]').forEach(s => s.remove());
+    }
     if (isAck) {
       document.getElementById('moduleLoader').style.display = 'flex';
       const btns = document.getElementById('mainButtons');
