feat: add spoils cache drops

--- a/dustland.html
+++ b/dustland.html
@@ -143,20 +143,21 @@
     </div>
   </div>
 
-  <script defer src="./event-bus.js"></script>
-  <script defer src="./core/effects.js"></script>
-  <script defer src="./core/inventory.js"></script>
-  <script defer src="./core/actions.js"></script>
-  <script defer src="./core/movement.js"></script>
-  <script defer src="./core/dialog.js"></script>
-  <script defer src="./core/combat.js"></script>
-  <script defer src="./core/party.js"></script>
-  <script defer src="./core/quests.js"></script>
-  <script defer src="./core/npc.js"></script>
-  <script defer src="./dustland-core.js"></script>
-  <script defer src="./dustland-path.js"></script>
-  <script defer src="./dustland-nano.js"></script>
-  <script defer src="./dustland-engine.js"></script>
+    <script defer src="./event-bus.js"></script>
+    <script defer src="./core/effects.js"></script>
+    <script defer src="./core/spoils-cache.js"></script>
+    <script defer src="./core/inventory.js"></script>
+    <script defer src="./core/actions.js"></script>
+    <script defer src="./core/movement.js"></script>
+    <script defer src="./core/dialog.js"></script>
+    <script defer src="./core/combat.js"></script>
+    <script defer src="./core/party.js"></script>
+    <script defer src="./core/quests.js"></script>
+    <script defer src="./core/npc.js"></script>
+    <script defer src="./dustland-core.js"></script>
+    <script defer src="./dustland-path.js"></script>
+    <script defer src="./dustland-nano.js"></script>
+    <script defer src="./dustland-engine.js"></script>
   <script>
     const params = new URLSearchParams(location.search);
     const isAck = params.get('ack-player') === '1';
