chore: block module scripts in presubmit

--- a/balance-tester.html
+++ b/balance-tester.html
@@ -177,6 +177,6 @@
       document.body.appendChild(modeScript);
     }
   </script>
-  <script defer src="./balance-tester-agent.js"></script>
+  <script type="module" src="./balance-tester-agent.js"></script>
 </body>
 </html>
