feat: expose watchEventFlag globally

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -592,6 +592,7 @@
   <script defer src="./core/quests.js"></script>
     <script defer src="./core/npc.js"></script>
     <script defer src="./dustland-core.js"></script>
+    <script defer src="./core/event-flags.js"></script>
     <script defer src="./core/loop.js"></script>
     <script defer src="./dustland-path.js"></script>
     <script defer src="./dustland-nano.js"></script>
