--- a/balance-tester.html
+++ b/balance-tester.html
@@ -154,6 +154,7 @@
   <script defer src="./core/quests.js"></script>
   <script defer src="./core/npc.js"></script>
   <script defer src="./dustland-core.js"></script>
+  <script defer src="./core/event-flags.js"></script>
   <script defer src="./dustland-path.js"></script>
   <script defer src="./dustland-nano.js"></script>
   <script defer src="./dustland-engine.js"></script>
