feat: separate mobile controls from map

--- a/balance-tester.html
+++ b/balance-tester.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1" />
   <title>Dustland: CRT Edition</title>
   <link rel="stylesheet" href="dustland.css" />
 </head>
@@ -129,7 +129,7 @@
   </div>
 
   <!-- Module Loader -->
-  <div id="moduleLoader" style="position:fixed;inset:0;background:rgba(0,0,0,.8);display:none;align-items:center;justify-content:center;z-index:40">
+  <div id="moduleLoader" style="position:fixed;top:0;left:0;right:0;background:rgba(0,0,0,.8);display:none;align-items:center;justify-content:center;z-index:40">
     <div class="win" style="width:min(420px,92vw);background:#0b0d0b;border:1px solid #2a382a;border-radius:12px;box-shadow:0 20px 80px rgba(0,0,0,.7);overflow:hidden">
       <header style="padding:10px 12px;border-bottom:1px solid #223022;font-weight:700">Load Adventure Module</header>
       <main style="padding:12px">
