fix: include item generator for loot caches

--- a/dustland.html
+++ b/dustland.html
@@ -155,6 +155,7 @@
   </div>
 
     <script defer src="./event-bus.js"></script>
+    <script defer src="./core/item-generator.js"></script>
     <script defer src="./core/effects.js"></script>
     <script defer src="./core/spoils-cache.js"></script>
     <script defer src="./core/inventory.js"></script>
