feat: gate shop behind dialog with keyboard nav

--- a/dustland.html
+++ b/dustland.html
@@ -190,7 +190,7 @@
     document.body.appendChild(modeScript);
   </script>
   <!-- Shop overlay -->
-  <div class="overlay" id="shopOverlay" role="dialog" aria-modal="true">
+  <div class="overlay" id="shopOverlay" role="dialog" aria-modal="true" tabindex="-1">
     <div class="shop-window">
       <header>
         <div id="shopName"></div>
