feat: register equipment items

--- a/dustland.html
+++ b/dustland.html
@@ -159,6 +159,7 @@
     <script defer src="./core/effects.js"></script>
     <script defer src="./core/spoils-cache.js"></script>
     <script defer src="./core/inventory.js"></script>
+    <script defer src="./core/equipment.js"></script>
     <script defer src="./core/actions.js"></script>
     <script defer src="./core/movement.js"></script>
     <script defer src="./core/dialog.js"></script>
