--- a/balance-tester.html
+++ b/balance-tester.html
@@ -157,6 +157,7 @@
   <script defer src="./event-bus.js"></script>
   <script defer src="./core/effects.js"></script>
   <script defer src="./core/inventory.js"></script>
+  <script defer src="./core/equipment.js"></script>
   <script defer src="./core/actions.js"></script>
   <script defer src="./core/movement.js"></script>
   <script defer src="./core/dialog.js"></script>
