--- a/dustland.html
+++ b/dustland.html
@@ -168,6 +168,8 @@
     <script defer src="./core/party.js"></script>
     <script defer src="./core/quests.js"></script>
     <script defer src="./core/npc.js"></script>
+    <script defer src="./data/skills/trainer-upgrades.js"></script>
+    <script defer src="./trainer-ui.js"></script>
     <script defer src="./dustland-core.js"></script>
     <script defer src="./core/event-flags.js"></script>
     <script defer src="./dustland-path.js"></script>
