--- a/dustland.html
+++ b/dustland.html
@@ -54,6 +54,7 @@
           <button class="btn" id="loadBtn">Load</button>
           <button class="btn" id="resetBtn">Reset</button>
           <button class="btn" id="settingsBtn">Settings</button>
+          <button class="btn" id="fxBtn">FX</button>
         </div>
         </div>
       </aside>
@@ -70,6 +71,32 @@
         <button class="btn" id="audioToggle">Audio: On</button>
         <button class="btn" id="mobileToggle">Mobile Controls: Off</button>
         <button class="btn" id="settingsClose">Close</button>
+      </main>
+    </div>
+  </div>
+
+  <!-- FX Debug Panel -->
+  <div id="fxPanel">
+    <div class="win">
+      <header>FX Debug</header>
+      <main>
+        <div class="field">
+          <label for="fxPrevAlpha">Trail Alpha</label>
+          <input type="range" id="fxPrevAlpha" min="0" max="1" step="0.01" />
+        </div>
+        <div class="field">
+          <label for="fxSceneAlpha">Scene Alpha</label>
+          <input type="range" id="fxSceneAlpha" min="0" max="1" step="0.01" />
+        </div>
+        <div class="field">
+          <label for="fxOffsetX">Offset X</label>
+          <input type="number" id="fxOffsetX" step="1" />
+        </div>
+        <div class="field">
+          <label for="fxOffsetY">Offset Y</label>
+          <input type="number" id="fxOffsetY" step="1" />
+        </div>
+        <button class="btn" id="fxClose">Close</button>
       </main>
     </div>
   </div>
@@ -155,6 +182,7 @@
   </div>
 
     <script defer src="./event-bus.js"></script>
+    <script defer src="./fx-config.js"></script>
     <script defer src="./ui.js"></script>
     <script defer src="./core/item-generator.js"></script>
     <script defer src="./core/effects.js"></script>
@@ -175,6 +203,7 @@
     <script defer src="./dustland-path.js"></script>
     <script defer src="./dustland-nano.js"></script>
     <script defer src="./dustland-engine.js"></script>
+    <script defer src="./fx-debug.js"></script>
   <script>
     const params = new URLSearchParams(location.search);
     const isAck = params.get('ack-player') === '1';
