feat: add fx toggles

--- a/dustland.html
+++ b/dustland.html
@@ -81,6 +81,14 @@
       <header>FX Debug</header>
       <main>
         <div class="field">
+          <label for="fxEnabled">FX Enabled</label>
+          <input type="checkbox" id="fxEnabled" />
+        </div>
+        <div class="field">
+          <label for="fxDamageFlash">Damage Flash</label>
+          <input type="checkbox" id="fxDamageFlash" />
+        </div>
+        <div class="field">
           <label for="fxPrevAlpha">Trail Alpha</label>
           <input type="range" id="fxPrevAlpha" min="0" max="1" step="0.01" />
         </div>
