--- a/dustland.html
+++ b/dustland.html
@@ -89,6 +89,18 @@
           <input type="checkbox" id="fxDamageFlash" />
         </div>
         <div class="field">
+          <label for="fxScanlines">Scanlines</label>
+          <input type="checkbox" id="fxScanlines" />
+        </div>
+        <div class="field">
+          <label for="fxCrtShear">CRT Shear</label>
+          <input type="checkbox" id="fxCrtShear" />
+        </div>
+        <div class="field">
+          <label for="fxColorBleed">Color Bleed</label>
+          <input type="checkbox" id="fxColorBleed" />
+        </div>
+        <div class="field">
           <label for="fxPrevAlpha">Trail Alpha</label>
           <input type="range" id="fxPrevAlpha" min="0" max="1" step="0.01" />
         </div>
