--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Adventure Construction Kit</title>
+  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dustland.css" />
   <style>
     body {
       margin: 0;
       background: #000;
       color: #c8f7c9;
-      font-family: system-ui, sans-serif;
+      font-family: 'Pixelify Sans', sans-serif;
       font-size: 14px;
       line-height: 1.5;
       position: relative;
