--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -581,23 +581,23 @@
     position:fixed; right:20px; bottom:20px; z-index:9999; border-radius:999px; padding:10px 14px;">
       ▶ Playtest
   </button>
-  <script defer src="./event-bus.js"></script>
-  <script defer src="./core/effects.js"></script>
-  <script defer src="./core/inventory.js"></script>
-  <script defer src="./core/actions.js"></script>
-  <script defer src="./core/movement.js"></script>
-  <script defer src="./core/dialog.js"></script>
-  <script defer src="./core/combat.js"></script>
-  <script defer src="./core/party.js"></script>
-  <script defer src="./core/quests.js"></script>
-    <script defer src="./core/npc.js"></script>
-    <script defer src="./dustland-core.js"></script>
-    <script defer src="./core/event-flags.js"></script>
-    <script defer src="./core/loop.js"></script>
-    <script defer src="./dustland-path.js"></script>
-    <script defer src="./dustland-nano.js"></script>
-    <script defer src="./dustland-engine.js"></script>
-    <script defer src="./adventure-kit.js"></script>
+  <script defer src="./scripts/event-bus.js"></script>
+  <script defer src="./scripts/core/effects.js"></script>
+  <script defer src="./scripts/core/inventory.js"></script>
+  <script defer src="./scripts/core/actions.js"></script>
+  <script defer src="./scripts/core/movement.js"></script>
+  <script defer src="./scripts/core/dialog.js"></script>
+  <script defer src="./scripts/core/combat.js"></script>
+  <script defer src="./scripts/core/party.js"></script>
+  <script defer src="./scripts/core/quests.js"></script>
+    <script defer src="./scripts/core/npc.js"></script>
+    <script defer src="./scripts/dustland-core.js"></script>
+    <script defer src="./scripts/core/event-flags.js"></script>
+    <script defer src="./scripts/core/loop.js"></script>
+    <script defer src="./scripts/dustland-path.js"></script>
+    <script defer src="./scripts/dustland-nano.js"></script>
+    <script defer src="./scripts/dustland-engine.js"></script>
+    <script defer src="./scripts/adventure-kit.js"></script>
   </body>
 
 </html>
