--- a/dustland.html
+++ b/dustland.html
@@ -202,29 +202,29 @@
     </div>
   </div>
 
-    <script defer src="./event-bus.js"></script>
-    <script defer src="./fx-config.js"></script>
-    <script defer src="./ui.js"></script>
-    <script defer src="./core/item-generator.js"></script>
-    <script defer src="./core/effects.js"></script>
-    <script defer src="./core/spoils-cache.js"></script>
-    <script defer src="./core/inventory.js"></script>
-    <script defer src="./core/equipment.js"></script>
-    <script defer src="./core/actions.js"></script>
-    <script defer src="./core/movement.js"></script>
-    <script defer src="./core/dialog.js"></script>
-    <script defer src="./core/combat.js"></script>
-    <script defer src="./core/party.js"></script>
-    <script defer src="./core/quests.js"></script>
-    <script defer src="./core/npc.js"></script>
+    <script defer src="./scripts/event-bus.js"></script>
+    <script defer src="./scripts/fx-config.js"></script>
+    <script defer src="./scripts/ui.js"></script>
+    <script defer src="./scripts/core/item-generator.js"></script>
+    <script defer src="./scripts/core/effects.js"></script>
+    <script defer src="./scripts/core/spoils-cache.js"></script>
+    <script defer src="./scripts/core/inventory.js"></script>
+    <script defer src="./scripts/core/equipment.js"></script>
+    <script defer src="./scripts/core/actions.js"></script>
+    <script defer src="./scripts/core/movement.js"></script>
+    <script defer src="./scripts/core/dialog.js"></script>
+    <script defer src="./scripts/core/combat.js"></script>
+    <script defer src="./scripts/core/party.js"></script>
+    <script defer src="./scripts/core/quests.js"></script>
+    <script defer src="./scripts/core/npc.js"></script>
     <script defer src="./data/skills/trainer-upgrades.js"></script>
-    <script defer src="./trainer-ui.js"></script>
-    <script defer src="./dustland-core.js"></script>
-    <script defer src="./core/event-flags.js"></script>
-    <script defer src="./dustland-path.js"></script>
-    <script defer src="./dustland-nano.js"></script>
-    <script defer src="./dustland-engine.js"></script>
-    <script defer src="./fx-debug.js"></script>
+    <script defer src="./scripts/trainer-ui.js"></script>
+    <script defer src="./scripts/dustland-core.js"></script>
+    <script defer src="./scripts/core/event-flags.js"></script>
+    <script defer src="./scripts/dustland-path.js"></script>
+    <script defer src="./scripts/dustland-nano.js"></script>
+    <script defer src="./scripts/dustland-engine.js"></script>
+    <script defer src="./scripts/fx-debug.js"></script>
   <script>
     const params = new URLSearchParams(location.search);
     const isAck = params.get('ack-player') === '1';
