fix: correct module picker path

--- a/dustland.html
+++ b/dustland.html
@@ -240,7 +240,7 @@
     }
     const modeScript = document.createElement('script');
     modeScript.defer = true;
-    modeScript.src = isAck ? './ack-player.js' : './module-picker.js';
+    modeScript.src = isAck ? './scripts/ack-player.js' : './scripts/module-picker.js';
     document.body.appendChild(modeScript);
   </script>
   <!-- Shop overlay -->
