feat: add adrenaline tint and grayscale FX

--- a/dustland.html
+++ b/dustland.html
@@ -102,6 +102,14 @@
           <input type="checkbox" id="fxColorBleed" />
         </div>
         <div class="field">
+          <label for="fxGrayscale">Grayscale</label>
+          <input type="checkbox" id="fxGrayscale" />
+        </div>
+        <div class="field">
+          <label for="fxAdrTint">Adrenaline Tint</label>
+          <input type="checkbox" id="fxAdrTint" />
+        </div>
+        <div class="field">
           <label for="fxPrevAlpha">Trail Alpha</label>
           <input type="range" id="fxPrevAlpha" min="0" max="1" step="0.01" />
         </div>
