--- a/music-demo.html
+++ b/music-demo.html
@@ -99,11 +99,67 @@
 
         <fieldset style="margin-top:10px" class="card">
           <legend>Preset Pattern</legend>
-          <label for="harmonyInput">Harmony (degrees by bar, comma-separated)</label>
-          <input id="harmonyInput" placeholder="e.g. 0,3,5,3" />
-          <div class="btn-group">
-            <button id="saveHarmonyBtn" class="btn">Save Harmony to Mood</button>
-          </div>
+          <details open>
+            <summary>Mood Settings</summary>
+            <div class="stat">
+              <div>Key</div>
+              <div>
+                <select id="moodKey">
+                  <option value="C">C</option>
+                  <option value="D">D</option>
+                  <option value="E">E</option>
+                  <option value="F">F</option>
+                  <option value="G">G</option>
+                  <option value="A">A</option>
+                  <option value="B">B</option>
+                </select>
+              </div>
+              <div>BPM</div>
+              <div><input id="moodBpm" type="number" min="60" max="200" /></div>
+              <div>Scale</div>
+              <div>
+                <select id="moodScale">
+                  <option value="major">Major</option>
+                  <option value="minor">Minor</option>
+                  <option value="dorian">Dorian</option>
+                  <option value="phrygian">Phrygian</option>
+                </select>
+              </div>
+              <div>Density</div>
+              <div><input id="moodDensity" type="number" min="0" max="1" step="0.05" /></div>
+              <div>Swing</div>
+              <div><input id="moodSwing" type="number" min="0" max="0.5" step="0.01" /></div>
+              <div>Lead Wave</div>
+              <div>
+                <select id="moodLeadWave">
+                  <option value="square">Square</option>
+                  <option value="triangle">Triangle</option>
+                  <option value="sawtooth">Sawtooth</option>
+                </select>
+              </div>
+              <div>Bass Wave</div>
+              <div>
+                <select id="moodBassWave">
+                  <option value="square">Square</option>
+                  <option value="triangle">Triangle</option>
+                  <option value="sawtooth">Sawtooth</option>
+                </select>
+              </div>
+              <div>Bar Start</div>
+              <div>
+                <select id="barStart">
+                  <option value="stab">Chord Stab</option>
+                  <option value="arp">Arpeggio</option>
+                  <option value="none">None</option>
+                </select>
+              </div>
+              <div>Harmony</div>
+              <div><input id="harmonyInput" placeholder="e.g. 0,3,5,3" /></div>
+            </div>
+            <div class="btn-group" style="margin-top:6px">
+              <button id="saveMoodBtn" class="btn">Save Mood Settings</button>
+            </div>
+          </details>
           <details style="margin-top:6px">
             <summary>Lead Motifs (global). Each motif is a 1‑bar seed set; playback repeats or switches with small variations.</summary>
             <div class="stat" style="margin-bottom:6px">
